--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       <section class="sidebar">
         <div class="sidebar__hour">
           <span class="sidebar__hour-text">07:00</span>
-          <!-- <span class="sidebar__hour-text">07:00</span>
+         <span class="sidebar__hour-text">07:00</span>
           <span class="sidebar__hour-text">07:00</span>
           <span class="sidebar__hour-text">07:00</span>
           <span class="sidebar__hour-text">07:00</span>
@@ -94,7 +94,7 @@
           <span class="sidebar__hour-text">07:00</span>
           <span class="sidebar__hour-text">07:00</span>
           <span class="sidebar__hour-text">07:00</span>
-          <span class="sidebar__hour-text">07:00</span> -->
+          <span class="sidebar__hour-text">07:00</span> 
          
           
 
